data/derived/comb/progs/unify/prog5884.ml.out
Characters 111-122:
  then (1,(let (y,z) = x in ([y+z] @ a)/10))
                            ^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
